# facebook___rebalancer

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile.base  Dockerfile.bundles  Dockerfile.explorer  Dockerfile.proxy  README.md  docker-compose.ci.yml  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: docker-explorer.yml  getdeps_linux.yml  getdeps_mac.yml  release.yml  wheels.yml
Formula/: rebalancer.rb
algopt/lp/detail/gurobi/: GurobiConstraint.cpp  GurobiConstraint.h  GurobiProblem.cpp  GurobiProblem.h
algopt/lp/environment/: Environment.h
algopt/rebalancer/algopt_common/: NonOwningPtr.h
algopt/rebalancer/benchmarks/: EquivalenceSetsBenchmark.cpp
algopt/rebalancer/benchmarks/solver_benchmarks/: ExpressionsBenchmark.cpp  ExpressionsLpBenchmark.cpp  GroupScopeItemTransformBenchmark.cpp  NativeOperatorGurobiLpBenchmark.cpp  NativeOperatorLpBenchmark.cpp  PackerBenchmark.cpp
algopt/rebalancer/common/tests/: state_holder_test.py
algopt/rebalancer/examples/eightqueens/: EightQueens.cpp  eightqueens.py
algopt/rebalancer/examples/shard_allocation/: ShardAllocation.cpp
algopt/rebalancer/examples/sudoku/: Sudoku.cpp  sudoku.py
algopt/rebalancer/examples/tasks_on_hosts/: TasksOnHosts.cpp  version1.py  version2.py  version3.py  version4.py  version5.py
algopt/rebalancer/examples/vertex_cover/: VertexCover.cpp
algopt/rebalancer/examples/web_balancing/: WebBalancing.cpp  web_balancing.py
algopt/rebalancer/explorer/app/: .dockerignore  .env  .gitignore  .prettierignore  Dockerfile  README.md  eslint.config.mjs  instrumentation.ts  nest.json  next.config.ts  package.json  package.oss.json  postcss.config.mjs  proxy.ts  relay.config.json  tsconfig.json  tsconfig.oss.json  vitest.config.ts
algopt/rebalancer/explorer/client/: server_selection.py
algopt/rebalancer/explorer/if/: explorer.thrift
algopt/rebalancer/interface/: ObjectCountExpander.cpp  ObjectCountExpander.h  ProblemChecker.cpp  ProblemChecker.h  ProblemSolver.cpp  ProblemSolver.h  UniverseProblemBuilder.h
algopt/rebalancer/interface/polyglot/: ProblemSolverBinding.cpp  ProblemSolverBinding.h  ProblemSolverBindingTests.cpp  problem_solver.ligen
algopt/rebalancer/interface/py_client/: ProblemSolver.py
algopt/rebalancer/interface/standalone/: BackwardCompatabilityUtils.cpp  BackwardCompatabilityUtils.h  StandaloneSolver.cpp
algopt/rebalancer/interface/tests/: AssignmentFormatTest.cpp  CapacityWithGroupPresenceTest.cpp  GreedyGroupToScopeItemMoveTypeTest.cpp  GroupDiversityTest.cpp  MinimizeContainersTest.cpp  ObjectCountExpanderTest.cpp  ProblemSolverChecksTest.cpp  ToFreeTest.cpp
algopt/rebalancer/interface/thrift/: ProblemSpecs.thrift  SolverSpecs.thrift  Types.thrift
algopt/rebalancer/materializer/: Materializer.cpp  Materializer.h
algopt/rebalancer/materializer/spec_builder/: AggregatedGroupSpecBuilder.cpp  AssignmentAffinitiesSpecBuilder.cpp  AvoidAssignmentsSpecBuilder.cpp  AvoidAssignmentsSpecBuilder.h  AvoidMovingSpecBuilder.cpp  BalanceSpecBuilder.cpp  BalanceSpecBuilder.h  BipartiteSwapsSpecBuilder.cpp  CapacityRatioSpecBuilder.cpp  CapacitySpecBuilder.cpp  CapacityWithGroupPresenceSpecBuilder.cpp  CapacityWithGroupPresenceSpecBuilder.h  CapacityWithSupplyAndDrSpecBuilder.cpp  ColocateGroupsSpecBuilder.cpp  DisasterRecoveryCapacitySpecBuilder.cpp  DiversifyWithinScopeItemSpecBuilder.cpp  DrainCapacitySpecBuilder.cpp  ExclusiveGroupsSpecBuilder.cpp  ExclusiveObjectsSpecBuilder.cpp  ExclusiveScopeItemsSpecBuilder.cpp  ExclusiveSwapsSpecBuilder.cpp  FlowSpecBuilder.cpp  GroupAssignmentAffinitiesSpecBuilder.cpp  GroupCapacitySpecBuilder.cpp  GroupCountSpecBuilder.cpp  GroupDiversitySpecBuilder.cpp  GroupIsolationLimitSpecBuilder.cpp  GroupMoveLimitSpecBuilder.cpp  ItemsAffinitySpecBuilder.cpp  LargeShardSpecBuilder.cpp  LogicalAndSpecBuilder.cpp  LogicalOrSpecBuilder.cpp  MaximizeAllocationSpecBuilder.cpp  MinimizeContainersSpecBuilder.cpp  MinimizeContainersSpecBuilder.h  MinimizeMovementSpecBuilder.cpp  MinimizeNthLargestUtilizationSpecBuilder.cpp  MinimizeSquaresSpecBuilder.cpp  MoveGroupSpecBuilder.cpp  MovesInProgressSpecBuilder.cpp  (+11 more)
algopt/rebalancer/materializer/utils/: ExpressionBuilder.cpp  ExpressionBuilder.h  LimitWrapper.cpp  LimitWrapper.h
algopt/rebalancer/python/: Bindings.cpp  _rebalancer.pyi
algopt/rebalancer/python/tests/: BindingsTest.cpp
algopt/rebalancer/solver/expressions/: AnyPositive.cpp  AnyPositive.h  BinaryOperation.cpp  BinaryOperation.h  BipartiteSwaps.cpp  BipartiteSwaps.h  BoundsOverride.cpp  BoundsOverride.h  Ceil.cpp  Ceil.h  Expression.cpp  Expression.h  GroupRoutingLatencyLookup.cpp  GroupRoutingLatencyLookup.h  GroupRoutingRing.cpp  GroupRoutingRing.h  GroupRoutingTrafficLookup.cpp  GroupRoutingTrafficLookup.h  GroupScopeItemTransformUtil.cpp  GroupScopeItemTransformUtil.h  LinearSum.cpp  LinearSum.h  Log.cpp  Log.h  Max.cpp  Max.h  NthLargest.cpp  NthLargest.h  ObjectLookup.cpp  ObjectLookup.h  ObjectLookupDynamic.cpp  ObjectLookupDynamic.h  ObjectPartition.cpp  ObjectPartition.h  ObjectPartitionLookup.cpp  ObjectPartitionLookup.h  ObjectPartitionLookupWithMinPresence.cpp  ObjectPartitionLookupWithMinPresence.h  ObjectPartitionMoveLimit.cpp  ObjectPartitionMoveLimit.h  (+30 more)
algopt/rebalancer/solver/moves/: ColocateGroupsMoveType.cpp  ColocateGroupsMoveType.h  DestinationsToExploreGenerator.cpp  (+13 more)
algopt/rebalancer/treeprof/: Event.cpp  Event.h  ExecutorWrapper.cpp
src/rebalancer/: specs.py
tools/: fetch_gha_logs.py  generate_example_bundles.sh  lint-version.py
tools/wheels/: before_all_macos.sh  build_linux_sdk.sh
website/: docusaurus.config.ts
website/docs/: intro.md
website/docs/cookbook/: index.md
website/docs/core-concepts/: overview.md
website/docs/getting-started/: first-model.md  first-problem.md  installation.md
website/docs/move-types/: index.md
website/docs/reference/: capacity.md  constraint-policy.md  goal-priorities.md  index.md
website/docs/solvers/: local-search.md  optimal.md  overview.md  performance.md  strategies.md
website/src/pages/: index.tsx
(+329 files in other folders)
